Eliminamos comentarios y colocamos cabecera en el titulo

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <main>
         <section>
-            <h1> Este es el Título del Post</h1>
-            <!-- <p> Esto es un párrafo descriptivo Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis dolorum, sunt maxime obcaecati placeat odit architecto aliquid! Magnam odit perspiciatis totam at rem quo! Eaque, fugit qui. Laudantium, amet a!</p> -->
+            <h1> Este es el Título del Post de Cabecera</h1>
+             <p> Esto es un párrafo descriptivo Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis dolorum, sunt maxime obcaecati placeat odit architecto aliquid! Magnam odit perspiciatis totam at rem quo! Eaque, fugit qui. Laudantium, amet a!</p>
         </section>
         <div>
 
             <section>
                 <h2> Esto es la seccion 2</h2>
-                <!-- <p>Este es el segundo parrafo descriptivo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas deserunt aperiam consequatur eligendi numquam, quia fugit minus, commodi atque nisi laboriosam aut quidem ab harum eaque! Tenetur illum cumque labore?
-                Beatae explicabo soluta nobis accusantium labore autem iure cumque? Maiores excepturi reprehenderit eligendi facilis ipsum possimus ratione illo. Consequuntur asperiores doloremque odio excepturi facere! Omnis officia cupiditate temporibus delectus odio.</p> -->
+                <p>Este es el segundo parrafo descriptivo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas deserunt aperiam consequatur eligendi numquam, quia fugit minus, commodi atque nisi laboriosam aut quidem ab harum eaque! Tenetur illum cumque labore?
+                Beatae explicabo soluta nobis accusantium labore autem iure cumque? Maiores excepturi reprehenderit eligendi facilis ipsum possimus ratione illo. Consequuntur asperiores doloremque odio excepturi facere! Omnis officia cupiditate temporibus delectus odio.</p>
             </section>
         </div>
         </main>
